style.css
* {
    padding: 0;
    margin: 0;
    font-family: "Raleway", sans-serif;
    scroll-behavior: smooth;
}

:root {
    --grey-black: #515151;
    --main-yellow: #FFC53D;
    --main-orange: #FF9A3D;
    --text-black: #222;
    --background-white: #FAFAFF;
}

@keyframes navanimation {
    25% {
        color: var(--main-orange);
    }

    50% {
        color: var(--main-yellow);
    }

    75% {
        color: var(--main-orange);
    }
}

#wrapper {
    max-width: 1440px;
    margin: 0 auto;
}

/* Navigation bar */

#navbar {
    padding-top: 48px;
    height: 50px;
}

#navbar #logo h5,
#navbar ul {
    font-weight: bold;
    letter-spacing: 1.5px;
    color: var(--grey-black);
}

#navbar #logo h5 {
    line-height: 28px;
    letter-spacing: 0.15;
    float: left;
    font-size: 24px;
    padding-left: 1%;
}

#navbar #logo img {
    float: left;
    padding-left: 5%;
}

#navbar ul {
    float: right;
    padding-right: 5%;
}

#navbar ul li {
    display: inline-block;
    padding-left: 50px;
    font-size: 18px;
}

#navbar ul li a {
    text-decoration: none;
    color: var(--grey-black);
}

/* HEADER */

#hero {
    height: 585px;
    width: 100%;
    background-image: url(imgs/cover-photo.png);
    background-size: cover;
    background-position: center;
    position: relative;
}

#hero h1,
#hero h2,
#hero p {
    text-align: center;
    font-weight: bold;
    position: relative;
}

#hero h1 {
    font-size: 100px;
    color: var(--main-yellow);
    padding-top: 13%;
}

#hero h2 {
    font-size: 36px;
    padding: 1.5% 0;
    color: #fff;
}

#hero p {
    font-size: 20px;
    color: var(--main-orange);
    font-weight: normal;
}

#hero .fab {
    margin: 15px 15px;
    padding: 5px;
    border-radius: 50%;
    opacity: 1;
    background-color: #fff;
    line-height: 20px;
    text-align: center;
    width: 20px;
}

#hero .fa-github {
    transform: scale(1.5);
    padding: 0;
    background-color: var(--main-orange);
    color: #fff;
}

/* add a layer !! */
#overlay {
    background-image: url(imgs/hero-layer.png);
    background-size: cover;
    background-blend-mode: lighten;
    height: 585px;
    width: 100%;
    top: 0;
    position: absolute;
    opacity: 0.2;
}

/* RECTANGLE */

#rectangle {
    margin-bottom: 50px;
}

#rectangle p {
    font-size: 36px;
    line-height: 42px;
    text-align: center;
    color: var(--text-black);
    font-weight: normal;
    letter-spacing: 0.02em;
    margin-top: 38px;
}

#buttons {
    display: flex;
    justify-content: center;
}

.rec-buttons {
    background: linear-gradient(270deg, #FFC53D 14%, #FF9A3D 68.5%);
    border: none;
    border-radius: 15px;
    width: 200px;
    height: 50px;
    cursor: pointer;
    margin: 50px 40px;

    /* button text */
    font-size: 18px;
    line-height: 21px;
    color: #fff;
    text-align: center;
    font-style: normal;
    font-weight: bold;
}

/* ABOUT ME */
#about-me {
    position: relative;
}

#about-back-rectangle {
    width: 68%;
    height: 400px;
    background-color: var(--background-white);
    position: absolute;
    top: -70px;
    z-index: -1;
}

#about-me h3 {
    font-family: "Ubuntu";
    font-style: normal;
    font-weight: bold;
    font-size: 32px;
    line-height: 37px;
    letter-spacing: 0.02em;
    padding-top: 20px;
    padding-left: 150px;
    margin-bottom: 3%;
    position: absolute;
    top: -60px;
}

#about-front-rectangle {
    /* position: absolute; */
    top: 75px;
    height: 220px;
    margin: 0 auto;
    width: 85%;
    padding: 30px 50px 30px 50px;
    background-color: #fff;
    box-shadow: 6px 6px 20px rgba(0, 0, 0, 0.05);
    display: grid;
    grid-template-columns: 15% 30% 55%;
}

#person-img {
    width: 105px;
    height: 105px;
    object-fit: cover;
    border-radius: 50%;
}

#personal-details {
    font-style: normal;
    font-weight: bold;
    font-size: 18px;
    line-height: 160.86%;
    color: var(--text-black);

    border-right: dotted var(--main-orange) 4px;
}

.details {
    color: var(--main-yellow);
    padding-left: 5px;
}

.details#email {
    text-decoration: underline;
}

#about-paragraph {
    font-size: 18px;
    line-height: 172.35%;
    /* or 31px */
    letter-spacing: 0.04em;
    margin-left: 20px;
}

/* SKILLS */

#skills {
    margin-top: 7%;
    margin-bottom: 50px;
    position: relative;
}

#skills-back-rectangle {
    position: absolute;
    right: 0;
    top: 0;
    height: 430px;
    width: 68%;
    background-color: var(--background-white);
}

#skills-back-rectangle h3 {
    font-weight: bold;
    font-size: 32px;
    line-height: 38px;
    letter-spacing: 0.02em;
    padding-top: 20px;
    padding-left: 50px;
}

#skills-front-rectangle {
    position: relative;
    top: 75px;
    height: 280px;
    width: 85%;
    margin: 0 7.5% 200px;

    display: grid;
    grid-template-columns: 1fr 1.5fr 1fr;

    box-shadow: 0px 6px 20px rgba(0, 0, 0, 0.05);
    background-color: #fff;
    text-align: center;
}

#skills-front-rectangle p {
    font-size: 24px;
    line-height: 28px;
}

#skills-front-rectangle .pyellow {
    font-weight: bold;
    color: var(--main-yellow);
    padding: 20px 0 10px 0;
}

.skill {
    margin: 50px;
}

#frontend {
    border-right: dotted var(--main-orange) 4px;
    border-left: dotted var(--main-orange) 4px;
}

/* PORTFOLIO */

#portfolio h3 {
    text-align: center;
    font-weight: bold;
    font-size: 32px;
    line-height: 38px;
    padding-bottom: 20px;
}

#portfolio-gallery {
    width: 100%;
    min-height: 600px;
    max-height: 100vh;
    display: grid;
    grid-template-columns: repeat(8, 1fr);
    grid-template-rows: 1fr 1fr;
}

.grid-item {
    background-size: cover;
}

.tile-1 {
    grid-column: 1/ span 3;
    grid-row: 1/2;

    background-image: url(imgs/pic1-workabroad.png);
}

.tile-2 {
    grid-column: 4/span 2;
    grid-row: 1/2;

    background-image: url(imgs/pic2-interior.png);
}
/* ... */

